--- a/.github/workflows/docker-image-ghcr.yml
+++ b/.github/workflows/docker-image-ghcr.yml
@@ -19,6 +19,9 @@ jobs:
             os: ubuntu-24.04-arm
     runs-on: ${{ matrix.os }}
 
+    outputs:
+      digest: ${{ steps.build.digest }}
+
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
       contents: read
